--- a/firecube-bmc.uvprojx
+++ b/firecube-bmc.uvprojx
@@ -10,12 +10,13 @@
       <TargetName>firecube-bmc</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>5060020::V5.06 (build 20)::ARMCC</pCCUsed>
+      <pCCUsed>5060750::V5.06 update 6 (build 750)::ARMCC</pCCUsed>
+      <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>STM32F411CEUx</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F4xx_DFP.2.5.0</PackID>
+          <PackID>Keil.STM32F4xx_DFP.2.13.0</PackID>
           <PackURL>http://www.keil.com/pack</PackURL>
           <Cpu>IROM(0x08000000,0x80000) IRAM(0x20000000,0x20000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -125,47 +126,6 @@
             <HexOffset>0</HexOffset>
             <Oh166RecLen>16</Oh166RecLen>
           </OPTHX>
-          <Simulator>
-            <UseSimulator>0</UseSimulator>
-            <LoadApplicationAtStartup>1</LoadApplicationAtStartup>
-            <RunToMain>1</RunToMain>
-            <RestoreBreakpoints>1</RestoreBreakpoints>
-            <RestoreWatchpoints>1</RestoreWatchpoints>
-            <RestoreMemoryDisplay>1</RestoreMemoryDisplay>
-            <RestoreFunctions>1</RestoreFunctions>
-            <RestoreToolbox>1</RestoreToolbox>
-            <LimitSpeedToRealTime>0</LimitSpeedToRealTime>
-            <RestoreSysVw>1</RestoreSysVw>
-          </Simulator>
-          <Target>
-            <UseTarget>1</UseTarget>
-            <LoadApplicationAtStartup>1</LoadApplicationAtStartup>
-            <RunToMain>1</RunToMain>
-            <RestoreBreakpoints>1</RestoreBreakpoints>
-            <RestoreWatchpoints>1</RestoreWatchpoints>
-            <RestoreMemoryDisplay>1</RestoreMemoryDisplay>
-            <RestoreFunctions>0</RestoreFunctions>
-            <RestoreToolbox>1</RestoreToolbox>
-            <RestoreTracepoints>1</RestoreTracepoints>
-            <RestoreSysVw>1</RestoreSysVw>
-          </Target>
-          <RunDebugAfterBuild>0</RunDebugAfterBuild>
-          <TargetSelection>6</TargetSelection>
-          <SimDlls>
-            <CpuDll></CpuDll>
-            <CpuDllArguments></CpuDllArguments>
-            <PeripheralDll></PeripheralDll>
-            <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile></InitializationFile>
-          </SimDlls>
-          <TargetDlls>
-            <CpuDll></CpuDll>
-            <CpuDllArguments></CpuDllArguments>
-            <PeripheralDll></PeripheralDll>
-            <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile></InitializationFile>
-            <Driver>Segger\JL2CM3.dll</Driver>
-          </TargetDlls>
         </DebugOption>
         <Utilities>
           <Flash1>
@@ -364,11 +324,15 @@
             <uThumb>0</uThumb>
             <uSurpInc>0</uSurpInc>
             <uC99>1</uC99>
+            <uGnu>0</uGnu>
             <useXO>0</useXO>
             <v6Lang>1</v6Lang>
             <v6LangP>1</v6LangP>
             <vShortEn>1</vShortEn>
             <vShortWch>1</vShortWch>
+            <v6Lto>0</v6Lto>
+            <v6WtE>0</v6WtE>
+            <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls>-DDEVICE_RTC=1 -DDEVICE_SLEEP=1 -DTOOLCHAIN_object -DTOOLCHAIN_ARM_STD --preinclude=mbed_config.h --split_sections --restrict -DMBED_BUILD_TIMESTAMP=1529939860.93 -DTARGET_STM32F4 -D__ASSERT_MSG --no_rtti -DDEVICE_PORTINOUT=1 -DTARGET_FF_MORPHO -g -DTARGET_STM32F411RE -DDEVICE_I2C_ASYNCH=1 -DTARGET_FF_ARDUINO -c -DTARGET_RTOS_M4_M7 -DDEVICE_SPISLAVE=1 -DDEVICE_PORTOUT=1 -DDEVICE_FLASH=1 -DDEVICE_STDIO_MESSAGES=1 -DTARGET_STM32F411xE -DDEVICE_SERIAL_FC=1 --cpu=Cortex-M4.fp -DDEVICE_SERIAL=1 -DDEVICE_ANALOGIN=1 -DTARGET_LIKE_CORTEX_M4 -D__CORTEX_M4 -DTARGET_CORTEX_M -DARM_MATH_CM4 -DUSB_STM_HAL --apcs=interwork -DDEVICE_USTICKER=1 -DDEVICE_I2C=1 -DTARGET_NUCLEO_F411RE -DTARGET_CORTEX -DTARGET_STM -DTOOLCHAIN_ARM -DDEVICE_INTERRUPTIN=1 -D_RTE_ --no_depend_system_headers -DTARGET_UVISOR_UNSUPPORTED -D__CMSIS_RTOS --md -DDEVICE_PWMOUT=1 -DDEVICE_SERIAL_ASYNCH=1 --multibyte_chars --gnu --brief_diagnostics -DTARGET_DEBUG -DTARGET_FAMILY_STM32 -DDEVICE_SPI=1 -D__MBED__=1 -DMBED_TRAP_ERRORS_ENABLED=1 -DLPTICKER_DELAY_TICKS=3 -DDEVICE_LPTICKER=1 -DDEVICE_PORTIN=1 -DTARGET_M4 -DMBED_DEBUG -D__FPU_PRESENT=1 -DDEVICE_I2CSLAVE=1 -DUSBHOST_OTHER -DDEVICE_SPI_ASYNCH=1 -DTRANSACTION_QUEUE_SIZE_SPI=2 -D__MBED_CMSIS_RTOS_CM -DTARGET_LIKE_MBED</MiscControls>
               <Define></Define>
@@ -386,6 +350,7 @@
             <NoWarn>0</NoWarn>
             <uSurpInc>0</uSurpInc>
             <useXO>0</useXO>
+            <uClangAs>0</uClangAs>
             <VariousControls>
               <MiscControls>--cpreproc --cpreproc_opts=-D__ASSERT_MSG,-DTRANSACTION_QUEUE_SIZE_SPI=2,-D__CORTEX_M4,-DUSB_STM_HAL,-DARM_MATH_CM4,-D__FPU_PRESENT=1,-DUSBHOST_OTHER,-D__MBED_CMSIS_RTOS_CM,-DLPTICKER_DELAY_TICKS=3,-D__CMSIS_RTOS</MiscControls>
               <Define></Define>
@@ -7481,5 +7446,11 @@
       </Groups>
     </Target>
   </Targets>
+
+  <RTE>
+    <apis/>
+    <components/>
+    <files/>
+  </RTE>
 
 </Project>
