Add system statistics and NV storage features.
 - Add Little FS and SPI block device support.
 - Add mbed-os system statistics
 - Reserved mbed-os CPU statistics

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mbed-os"]
 	path = mbed-os
 	url = http://github.com/ARMmbed/mbed-os
+[submodule "spif-driver"]
+	path = spif-driver
+	url = http://github.com/armmbed/spif-driver
